# musubi-mcp

./: .env.example  .gitignore  AGENTS.md  AGENT_CONTEXT.md  HANDOFF.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: cli_help.txt
src/musubi_mcp/: __init__.py  architectures.py  constants.py  dataset_config.py  knowledge.py  resources.py  runner.py  server.py
src/musubi_mcp/knowledge_files/: REVIEW_NOTES.md  common_failures.md  dataset_quality.md  flux2_dev_training.md  flux2_klein_training.md  framepack_training.md  hardware_profiles.md  hunyuanvideo_training.md  ltx23_training.md  qwen_image_training.md  sources.md  wan22_training.md  zimage_training.md
tests/: test_architectures.py  test_dataset_config.py  test_extra_tools.py  test_knowledge.py  test_runner.py  test_server_tools.py
