[project]
name = "musubi-mcp"
version = "0.1.0"
description = "MCP server for Musubi Tuner — train LoRA/LoHa/LoKr for Wan, FLUX.2, Z-Image, and more"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "musubi-mcp contributors" },
]
keywords = ["mcp", "musubi-tuner", "lora", "training", "wan", "flux", "z-image", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.20.0",
    # CLAUDE-NOTE: tomli is only needed on <3.11; tomllib is stdlib from 3.11+.
    # We depend on tomli unconditionally because we target 3.10+.
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
musubi-mcp = "musubi_mcp.server:main"

[project.urls]
Homepage = "https://github.com/hoodtronik/musubi-mcp"
Repository = "https://github.com/hoodtronik/musubi-mcp"
Issues = "https://github.com/hoodtronik/musubi-mcp/issues"
"Musubi Tuner (upstream)" = "https://github.com/kohya-ss/musubi-tuner"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/musubi_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
